@@ -1,5 +1,6 @@
 Panelizer 7.x-3.x-dev, xxxx-xx-xx
 ---------------------------------
+#2785821 by DamienMcKenna: Resolve issues with tests running on drupalci.
 
 
 Panelizer 7.x-3.3, 2016-08-17
